A number of fixes and improvements Fixed the math so it includes the last day of the month instead of showing Infinity. Use i18n to format output (readonly) numbers Added icons Fixed alignment Made things bolder and bigger

--- a/src/stepscalc.scss
+++ b/src/stepscalc.scss
@@ -2,3 +2,7 @@
 @use "bootstrap-icons/font/bootstrap-icons" with (
   $bootstrap-icons-font-dir: "/node_modules/bootstrap-icons/font/fonts"
 );
+
+.progress-bar {
+  overflow: visible;
+}
